--- a/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
+++ b/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
@@ -5,23 +5,23 @@
    "id": "34aa570c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T11:38:37.454927Z",
-     "start_time": "2025-05-07T11:38:37.452793Z"
+     "end_time": "2025-05-07T12:38:37.809719Z",
+     "start_time": "2025-05-07T12:38:37.808048Z"
     }
    },
    "source": [
     "# Name & ID of team members"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 66
   },
   {
    "cell_type": "code",
    "id": "0ab72501",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T11:59:37.663402Z",
-     "start_time": "2025-05-07T11:59:37.654295Z"
+     "end_time": "2025-05-07T12:38:38.681348Z",
+     "start_time": "2025-05-07T12:38:38.674007Z"
     }
    },
    "source": [
@@ -173,15 +173,15 @@
     "                    \n"
    ],
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 67
   },
   {
    "cell_type": "code",
    "id": "5f8ffda9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:33:45.884677Z",
-     "start_time": "2025-05-07T12:33:45.881016Z"
+     "end_time": "2025-05-07T12:39:08.009644Z",
+     "start_time": "2025-05-07T12:39:08.006757Z"
     }
    },
    "source": [
@@ -215,15 +215,15 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 64
+   "execution_count": 70
   },
   {
    "cell_type": "code",
    "id": "78ebb488",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T11:52:31.132175Z",
-     "start_time": "2025-05-07T11:52:31.128919Z"
+     "end_time": "2025-05-07T12:39:10.339799Z",
+     "start_time": "2025-05-07T12:39:10.335608Z"
     }
    },
    "source": [
@@ -273,15 +273,15 @@
     "               "
    ],
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 72
   },
   {
    "cell_type": "code",
    "id": "abf0cf45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:33:47.986677Z",
-     "start_time": "2025-05-07T12:33:47.961405Z"
+     "end_time": "2025-05-07T12:39:11.970976Z",
+     "start_time": "2025-05-07T12:39:11.967402Z"
     }
    },
    "source": [
@@ -360,23 +360,13 @@
       "Node Karabuk exists!!!\n",
       "Node Kilis exists!!!\n",
       "Node Osmaniye exists!!!\n",
-      "Node Duzce exists!!!\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[65]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Example run \u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[43mfind_shortest_path\u001B[49m\u001B[43m(\u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mIstanbul\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mAnkara\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[64]\u001B[39m\u001B[32m, line 26\u001B[39m, in \u001B[36mfind_shortest_path\u001B[39m\u001B[34m(departure, destination)\u001B[39m\n\u001B[32m     23\u001B[39m    recently = recently.prev\n\u001B[32m     25\u001B[39m path.reverse()\n\u001B[32m---> \u001B[39m\u001B[32m26\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33;43m\"\u001B[39;49m\u001B[33;43mMinimum number of provinces : \u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m  \u001B[49m\u001B[43m+\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mlen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m)\u001B[49m\u001B[43m-\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m)\u001B[49m)\n\u001B[32m     27\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mShortest path:\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33m, \u001B[39m\u001B[33m\"\u001B[39m.join(path))\n",
-      "\u001B[31mTypeError\u001B[39m: can only concatenate str (not \"int\") to str"
+      "Node Duzce exists!!!\n",
+      "Minimum number of provinces : 4\n",
+      "Shortest path: Istanbul, Kocaeli, Bilecik, Eskisehir, Ankara\n"
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 73
   },
   {
    "cell_type": "code",
