--- a/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
+++ b/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
@@ -20,8 +20,8 @@
    "id": "0ab72501",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:38:38.681348Z",
-     "start_time": "2025-05-07T12:38:38.674007Z"
+     "end_time": "2025-05-10T10:01:08.826386Z",
+     "start_time": "2025-05-10T10:01:08.819459Z"
     }
    },
    "source": [
@@ -173,15 +173,15 @@
     "                    \n"
    ],
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "5f8ffda9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:39:08.009644Z",
-     "start_time": "2025-05-07T12:39:08.006757Z"
+     "end_time": "2025-05-10T10:12:36.936639Z",
+     "start_time": "2025-05-10T10:12:36.931685Z"
     }
    },
    "source": [
@@ -189,9 +189,10 @@
     "   g = Graph()\n",
     "   with open(\"cities_and_neighbors.txt\", 'r', encoding='utf-8') as file:\n",
     "        for line in file:\n",
-    "            parts = line.strip().split(',')\n",
-    "            city = parts[0]\n",
-    "            neighbors = parts[1:]\n",
+    "            new_line = line.strip()\n",
+    "            words = new_line.split(',')\n",
+    "            city = words[0]\n",
+    "            neighbors = words[1:]\n",
     "            g.addNode(city)\n",
     "            for neighbor in neighbors:\n",
     "                g.addEdge(city, neighbor)\n",
@@ -200,7 +201,7 @@
     "\n",
     "   dest_node = g.getNode(destination)\n",
     "   if dest_node.getDist() is None:\n",
-    "      print(\"No path found\")\n",
+    "      print(\"No path\")\n",
     "      return\n",
     "\n",
     "   path = []\n",
@@ -215,78 +216,82 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "78ebb488",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:39:10.339799Z",
-     "start_time": "2025-05-07T12:39:10.335608Z"
+     "end_time": "2025-05-10T10:18:18.768037Z",
+     "start_time": "2025-05-10T10:18:18.763689Z"
     }
    },
    "source": [
     "def find_shortest_path_with_stop(departure, destination, stop):            \n",
-    "   # complete this function code. You should use graph code above in your implementation with the additions you have done\n",
-    "   # read cities_and_neighbors.txt to create the graph\n",
+    "\n",
     "   g = Graph()\n",
     "   with open(\"cities_and_neighbors.txt\", 'r', encoding='utf-8') as file:\n",
     "        for line in file:\n",
-    "            parts = line.strip().split(',')\n",
-    "            city = parts[0]\n",
-    "            neighbors = parts[1:]\n",
+    "            new_line = line.strip()\n",
+    "            words = new_line.split(',')\n",
+    "            city = words[0]\n",
+    "            neighbors = words[1:]\n",
     "            g.addNode(city)\n",
     "            for neighbor in neighbors:\n",
     "                g.addEdge(city, neighbor)\n",
     "\n",
-    "    # departure -> stop\n",
     "   g.bfs(departure)\n",
+    "\n",
     "   stop_node = g.getNode(stop)\n",
+    "\n",
     "   if stop_node.getDist() is None:\n",
-    "      print(\"No path found from\", departure, \"to\", stop)\n",
+    "      print(\"there is no way\", departure, \"to \", stop)\n",
     "      return\n",
     "\n",
-    "   path1 = []\n",
+    "   way1 = []\n",
     "   current = stop_node\n",
     "   while current is not None:\n",
-    "      path1.append(current.getLabel())\n",
+    "      way1.append(current.getLabel())\n",
     "      current = current.prev\n",
-    "   path1.reverse()\n",
+    "   way1.reverse()\n",
+    "\n",
     "\n",
     "   g.bfs(stop)\n",
+    "\n",
     "   dest_node = g.getNode(destination)\n",
+    "\n",
     "   if dest_node.getDist() is None:\n",
-    "      print(\"No path found from\", stop, \"to\", destination)\n",
+    "      print(\"there is no way from \", stop, \"to \", destination)\n",
     "      return\n",
     "\n",
-    "   path2 = []\n",
+    "   way2 = []\n",
     "   current = dest_node\n",
     "   while current is not None:\n",
-    "      path2.append(current.getLabel())\n",
+    "      way2.append(current.getLabel())\n",
     "      current = current.prev\n",
-    "   path2.reverse()\n",
+    "   way2.reverse()\n",
     "\n",
-    "   full_path = path1 + path2[1:]\n",
-    "   print(\"Minimum number of provinces : \"  + str(len(full_path)-1))\n",
-    "   print(\"Shortest Path:\", \", \".join(full_path))\n",
+    "   total_way = way1 + way2[1:]\n",
+    "   print(\"Minimum number of provinces : \"  + str(len(total_way)-1))\n",
+    "   print(\"Shortest Path:\", \", \".join(total_way))\n",
     "               "
    ],
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "id": "abf0cf45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:39:11.970976Z",
-     "start_time": "2025-05-07T12:39:11.967402Z"
+     "end_time": "2025-05-10T10:18:19.281089Z",
+     "start_time": "2025-05-10T10:18:19.278198Z"
     }
    },
    "source": [
     "# Example run \n",
-    "find_shortest_path(\"Istanbul\", \"Ankara\")\n",
+    "find_shortest_path(\"Istanbul\", \"Mugla\")\n",
     "               "
    ],
    "outputs": [
@@ -361,20 +366,20 @@
       "Node Kilis exists!!!\n",
       "Node Osmaniye exists!!!\n",
       "Node Duzce exists!!!\n",
-      "Minimum number of provinces : 4\n",
-      "Shortest path: Istanbul, Kocaeli, Bilecik, Eskisehir, Ankara\n"
+      "Minimum number of provinces : 6\n",
+      "Shortest path: Istanbul, Kocaeli, Bursa, Balikesir, Izmir, Aydin, Mugla\n"
      ]
     }
    ],
-   "execution_count": 73
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "id": "09296c30",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:24:55.974476Z",
-     "start_time": "2025-05-07T12:24:55.970817Z"
+     "end_time": "2025-05-10T10:18:19.890831Z",
+     "start_time": "2025-05-10T10:18:19.887342Z"
     }
    },
    "source": [
@@ -459,15 +464,15 @@
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "id": "50a2f788",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:24:41.877727Z",
-     "start_time": "2025-05-07T12:24:41.873113Z"
+     "end_time": "2025-05-10T10:18:20.353001Z",
+     "start_time": "2025-05-10T10:18:20.349809Z"
     }
    },
    "source": [
@@ -552,15 +557,28 @@
      ]
     }
    ],
-   "execution_count": 60
+   "execution_count": 17
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e7ea7853",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-10T10:01:10.214847Z",
+     "start_time": "2025-05-10T10:01:10.213149Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "65779927d6870eb3"
   }
  ],
  "metadata": {
