--- a/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
+++ b/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
@@ -5,23 +5,24 @@
    "id": "34aa570c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T12:38:37.809719Z",
-     "start_time": "2025-05-07T12:38:37.808048Z"
+     "end_time": "2025-05-10T10:26:00.854630Z",
+     "start_time": "2025-05-10T10:26:00.851848Z"
     }
    },
    "source": [
-    "# Name & ID of team members"
+    "# Talha Burak Şimşek 210402039\n",
+    "# Emrihan Topal 221401031"
    ],
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 32
   },
   {
    "cell_type": "code",
    "id": "0ab72501",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:01:08.826386Z",
-     "start_time": "2025-05-10T10:01:08.819459Z"
+     "end_time": "2025-05-10T10:19:11.490123Z",
+     "start_time": "2025-05-10T10:19:11.478853Z"
     }
    },
    "source": [
@@ -173,15 +174,15 @@
     "                    \n"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "id": "5f8ffda9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:12:36.936639Z",
-     "start_time": "2025-05-10T10:12:36.931685Z"
+     "end_time": "2025-05-10T10:19:11.818406Z",
+     "start_time": "2025-05-10T10:19:11.815173Z"
     }
    },
    "source": [
@@ -216,15 +217,15 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "id": "78ebb488",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:18:18.768037Z",
-     "start_time": "2025-05-10T10:18:18.763689Z"
+     "end_time": "2025-05-10T10:19:12.147097Z",
+     "start_time": "2025-05-10T10:19:12.142168Z"
     }
    },
    "source": [
@@ -278,15 +279,15 @@
     "               "
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 20
   },
   {
    "cell_type": "code",
    "id": "abf0cf45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:18:19.281089Z",
-     "start_time": "2025-05-10T10:18:19.278198Z"
+     "end_time": "2025-05-10T10:23:22.274112Z",
+     "start_time": "2025-05-10T10:23:22.269584Z"
     }
    },
    "source": [
@@ -371,15 +372,15 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 28
   },
   {
    "cell_type": "code",
    "id": "09296c30",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:18:19.890831Z",
-     "start_time": "2025-05-10T10:18:19.887342Z"
+     "end_time": "2025-05-10T10:23:26.628721Z",
+     "start_time": "2025-05-10T10:23:26.624960Z"
     }
    },
    "source": [
@@ -464,21 +465,20 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 29
   },
   {
    "cell_type": "code",
    "id": "50a2f788",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:18:20.353001Z",
-     "start_time": "2025-05-10T10:18:20.349809Z"
+     "end_time": "2025-05-10T10:23:40.896619Z",
+     "start_time": "2025-05-10T10:23:40.892662Z"
     }
    },
    "source": [
     "# Example run \n",
-    "find_shortest_path_with_stop(\"Istanbul\", \"Mugla\", \"Konya\")\n",
-    "               "
+    "find_shortest_path_with_stop(\"Istanbul\", \"Mugla\", \"Konya\")\n"
    ],
    "outputs": [
     {
@@ -552,25 +552,12 @@
       "Node Kilis exists!!!\n",
       "Node Osmaniye exists!!!\n",
       "Node Duzce exists!!!\n",
-      "Minimum number of provinces : 6\n",
-      "Shortest Path: Istanbul, Kocaeli, Bilecik, Eskisehir, Konya, Antalya, Mugla\n"
+      "Minimum number of provinces : 14\n",
+      "Shortest Path: Istanbul, Tekirdag, Edirne, Kirikkale, Yozgat, Sivas, Giresun, Trabzon, Giresun, Sivas, Kayseri, Adana, Mersin, Antalya, Mugla\n"
      ]
     }
    ],
-   "execution_count": 17
-  },
-  {
-   "cell_type": "code",
-   "id": "e7ea7853",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-10T10:01:10.214847Z",
-     "start_time": "2025-05-10T10:01:10.213149Z"
-    }
-   },
-   "source": [],
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -578,7 +565,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "65779927d6870eb3"
+   "id": "fe2bfc721a1f2499"
   }
  ],
  "metadata": {
