--- a/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
+++ b/<Talha Burak>_< Şimşek>_<Emirhan>_<Topal>_assignment.ipynb
@@ -5,8 +5,8 @@
    "id": "34aa570c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:26:00.854630Z",
-     "start_time": "2025-05-10T10:26:00.851848Z"
+     "end_time": "2025-05-10T10:39:03.127455Z",
+     "start_time": "2025-05-10T10:39:03.125015Z"
     }
    },
    "source": [
@@ -14,15 +14,15 @@
     "# Emrihan Topal 221401031"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "0ab72501",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:19:11.490123Z",
-     "start_time": "2025-05-10T10:19:11.478853Z"
+     "end_time": "2025-05-10T10:39:03.392390Z",
+     "start_time": "2025-05-10T10:39:03.386205Z"
     }
    },
    "source": [
@@ -174,15 +174,15 @@
     "                    \n"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "id": "5f8ffda9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:19:11.818406Z",
-     "start_time": "2025-05-10T10:19:11.815173Z"
+     "end_time": "2025-05-10T10:39:03.849348Z",
+     "start_time": "2025-05-10T10:39:03.846554Z"
     }
    },
    "source": [
@@ -217,15 +217,15 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "78ebb488",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:19:12.147097Z",
-     "start_time": "2025-05-10T10:19:12.142168Z"
+     "end_time": "2025-05-10T10:39:04.237178Z",
+     "start_time": "2025-05-10T10:39:04.234641Z"
     }
    },
    "source": [
@@ -279,15 +279,15 @@
     "               "
    ],
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "abf0cf45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:23:22.274112Z",
-     "start_time": "2025-05-10T10:23:22.269584Z"
+     "end_time": "2025-05-10T10:39:04.461634Z",
+     "start_time": "2025-05-10T10:39:04.458749Z"
     }
    },
    "source": [
@@ -372,15 +372,15 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "id": "09296c30",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:23:26.628721Z",
-     "start_time": "2025-05-10T10:23:26.624960Z"
+     "end_time": "2025-05-10T10:39:04.677242Z",
+     "start_time": "2025-05-10T10:39:04.674779Z"
     }
    },
    "source": [
@@ -465,15 +465,15 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "id": "50a2f788",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-10T10:23:40.896619Z",
-     "start_time": "2025-05-10T10:23:40.892662Z"
+     "end_time": "2025-05-10T10:39:05.147831Z",
+     "start_time": "2025-05-10T10:39:05.144748Z"
     }
    },
    "source": [
@@ -552,20 +552,12 @@
       "Node Kilis exists!!!\n",
       "Node Osmaniye exists!!!\n",
       "Node Duzce exists!!!\n",
-      "Minimum number of provinces : 14\n",
-      "Shortest Path: Istanbul, Tekirdag, Edirne, Kirikkale, Yozgat, Sivas, Giresun, Trabzon, Giresun, Sivas, Kayseri, Adana, Mersin, Antalya, Mugla\n"
+      "Minimum number of provinces : 6\n",
+      "Shortest Path: Istanbul, Kocaeli, Bilecik, Eskisehir, Konya, Antalya, Mugla\n"
      ]
     }
    ],
-   "execution_count": 31
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "fe2bfc721a1f2499"
+   "execution_count": 14
   }
  ],
  "metadata": {
